Fix ketboard icon alignment

--- a/packages/editor/test/playground/map-render/css/viewmode.css
+++ b/packages/editor/test/playground/map-render/css/viewmode.css
@@ -27,6 +27,7 @@ div#footer-logo {
 
 #floating-panel {
     bottom: 80px;
+    align-items: stretch;
 }
 
 div#mindplot {
